--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
+{
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
@@ -13,6 +14,8 @@
     "lowdb": "^7.0.1",
     "expo-server-sdk": "^4.0.0",
     "nanoid": "^5.0.7",
-    "twilio": "^5.2.2"
+    "twilio": "^5.2.2",
+    "socket.io": "^4.7.5"   // <-- add this
   }
 }
+
