--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "start": "node index.js"
   },
-{
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "lowdb": "^7.0.1",
+    "cors": "^2.8.5",
     "expo-server-sdk": "^4.0.0",
+    "express": "^4.19.2",
+    "lowdb": "^7.0.1",
     "nanoid": "^5.0.7",
-    "twilio": "^5.2.2",
-    "socket.io": "^4.7.5"   
+    "socket.io": "^4.7.5",
+    "twilio": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
 
